--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "livewire/livewire": "^1.0",
         "realrashid/sweet-alert": "^3.1"
     },
     "require-dev": {
